--- a/RockPaperScissor/RockPaperScissor/RockPaperScissor.csproj
+++ b/RockPaperScissor/RockPaperScissor/RockPaperScissor.csproj
@@ -87,7 +87,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="controller.cs" />
+    <Compile Include="Controller.cs" />
     <Compile Include="model.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
