Seperate the classes

--- a/RockPaperScissor/RockPaperScissor/RockPaperScissor.csproj
+++ b/RockPaperScissor/RockPaperScissor/RockPaperScissor.csproj
@@ -89,6 +89,8 @@
   <ItemGroup>
     <Compile Include="Controller.cs" />
     <Compile Include="model.cs" />
+    <Compile Include="Model\Credential.cs" />
+    <Compile Include="Model\Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
